<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorSignupActivityBackground"
    android:fillViewport="true"
    tools:context="com.example.developer.mytime.activities.SignUpActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <ImageView
                android:id="@+id/icon"
                android:layout_width="@dimen/signup_activity_icon_width"
                android:layout_height="@dimen/signup_activity_icon_height"
                android:contentDescription="@string/icon_app_content_description" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/signup_activity_container_inputs_padding">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/TextLabelLogin">

                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/signup_activity_hint_email"
                    android:inputType="textEmailAddress" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/TextLabelLogin">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/signup_activity_hint_password"
                    android:inputType="textPassword" />
            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/signup_activity_container_button_padding">

            <Button
                android:id="@+id/signup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/signup_activity_signup_button_margin"
                android:background="@drawable/signup_button_background"
                android:text="@string/signup_activity_text_signup_button"
                android:textColor="@color/colorSignupActivitySignupButtonText"
                android:theme="@style/AlertDialog.AppCompat.Light" />
        </LinearLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="@dimen/signup_activity_footer_height"
                android:layout_alignParentBottom="true"
                android:layout_marginTop="@dimen/signup_activity_card_footer_margin"
                app:cardElevation="@dimen/signup_activity_footer_elevation">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/signup_activity_text_view_footer_padding"
                        android:text="@string/signup_activity_text_question_account"
                        android:textColor="@color/colorSignupActivitySignupFooterText" />

                    <TextView
                        android:id="@+id/login"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/signup_activity_text_view_footer_padding"
                        android:text="@string/signup_activity_text_login_button"
                        android:textColor="@color/colorSignupActivitySignupFooterText" />
                </LinearLayout>
            </android.support.v7.widget.CardView>

        </RelativeLayout>
    </LinearLayout>

</ScrollView>
